maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:71: error: not found: value d
    d = ppC(getX(),getY())
    ^